icons issue on mobile firefox

--- a/css/works.css
+++ b/css/works.css
@@ -47,12 +47,9 @@
 .work-item ul li {
     display: inline-flex;
     flex-direction: row;
-    width: 15%;
-    padding: 10% 0 0;
-}
-
-.work-item li img {
+    width: 20%;
     height: auto;
+    padding: 10% 0 0;
 }
 
 .works img:hover {
@@ -82,5 +79,10 @@
         width: 100%;
         margin: 0 auto;
         line-height: 2em;
+    }
+    .work-item ul li {
+        width: 30%;
+        min-width: 70px;
+        height: auto;
     }
 }
